2010-05-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug 14413: htmlArea RTE: ExtJS resources are not released in IE when RTE closes

2010-05-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14411: Use of deprecated method t3lib_BEfunc::getSetUpdateSignal in impexp
	* Follow-up to bug #13670: Fatal in t3lib_querygenerator
	* Follow-up to bug #13670: Fatal in fe_adminLib.inc (thanks to Lars Houmark)

2010-05-16  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to bug #13670: #14393 Fatal error in impexp

2010-05-16  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bug #13670: Performance optimization: change while(list() to foreach()

2010-05-15  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14312: Notice undefined index systemLog and undefined constant TYPO3_ERRORHANDLER_MODE (thanks to Martin Mueller)
	* Fixed bug #14309: Notice undefined index "error" & "debug" in index_ts.php (thanks to Martin Müller)
	* Fixed bug #14180: No Message shown when accessing backend if TYPO3_CONF_VARS[BE][adminOnly] = -1 (thanks to Georg Ringer)

2010-05-14  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #14337: "The install tool is locked" doesn't send no-cache headers (thanks to Steffen Gebert)

2010-05-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14339: Better options for deprecation log
	* Fixed bug #14375: Rewrite of the debug panel (More Features!, More Stability!, More Usability!) (Stefan Galinski)
	* Follow-up to bug #14365: Bug: Install Tool skin is sometimes wrong (thanks to Lars Houmark)
	* Fixed bug #14367: Install Tool does not provide a logout possibility (thanks to Lars Houmark)

2010-05-13  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed issue #13670: Performance optimization: change while(list() to foreach() (thanks to Georg Ringer and Steffen Gebert)

2010-05-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12803: Creating or deleting ENABLE_INSTALL_TOOL file saves settings in "User Settings"