@@ -1,6 +1,10 @@
+2010-05-16  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #13670: #14327: Condition misses check for no logged in user
+
 2010-05-17  Stanislas Rolland  <typo3@sjbr.ca>
 
-	* Fixed bug 14413: htmlArea RTE: ExtJS resources are not released in IE when RTE closes
+	* Fixed bug #14413: htmlArea RTE: ExtJS resources are not released in IE when RTE closes
 
 2010-05-17  Christian Kuhn  <lolli@schwarzbu.ch>
 
